--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,19 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "vuejs: chrome",
+            "url": "http://127.0.0.1:8000",
+            "webRoot": "${workspaceFolder}/public",
+            "breakOnLoad": true,
+            "sourceMapPathOverrides": {
+                  "webpack:///resources/js/*.vue": "${workspaceFolder}/resources/js/*.vue",
+                  "webpack:///./resources/js/*.js": "${workspaceFolder}/resources/js/*.js",
+                   "webpack:///./node_modules/*": "${workspaceFolder}/node_modules/*"
+             },
+      },
+    ]
 }
