Form incidencia funciona pero no mucho

--- a/plantilla_vue/.vscode/launch.json
+++ b/plantilla_vue/.vscode/launch.json
@@ -17,5 +17,11 @@
                    "webpack:///./node_modules/*": "${workspaceFolder}/node_modules/*"
              },
       },
+      {
+        "name": "Listen for XDebug",
+        "type": "php",
+        "request": "launch",
+        "port": 9000
+    },
     ]
 }
