--- a/plantilla_vue/package.json
+++ b/plantilla_vue/package.json
@@ -26,6 +26,8 @@
     "dependencies": {
         "bootstrap-vue": "^2.11.0",
         "es6-promise": "^4.2.8",
+        "jspdf": "^1.5.3",
+        "jspdf-autotable": "^3.4.4",
         "vue-axios": "^2.1.5",
         "vuex": "^3.1.2"
     }
